--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -118,7 +118,7 @@
 @media (prefers-color-scheme: dark) {
   .card,
   .footer {
-    border-color: #222;
+    border-color: rgb(255, 255, 255);
   }
   .code {
     background: #111;
