--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -8,29 +8,43 @@
   flex: 1;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+
   align-items: center;
 }
-
-.footer {
-  display: flex;
-  flex: 1;
-  padding: 2rem 0;
-  border-top: 1px solid #eaeaea;
-  justify-content: center;
-  align-items: center;
+.polularBlog{
+  font-size:xx-large;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  margin : 33px;
 }
 
-.footer a {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-grow: 1;
+.popular{
+  border: 2px solid rgba(212, 211, 211, 0.61);
+  border-radius: 20px;
+  padding: 1.2rem;
+  background-color: rgba(122, 116, 116, 0.137);
+
+}
+.blogs{background-color: rgba(122, 116, 116, 0.452);
+  
+    border-radius: 20px;
+    padding: 23px;
+  margin-top: 30px;
+  cursor: pointer;
+}
+.blogs:hover{
+  background-color:  rgba(31, 26, 26, 0.452);
+}
+.blogitem{
+  
+  cursor: pointer;
+  font-weight: 900;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
 .title a {
-  color: #0070f3;
+  color: #bacadb;
   text-decoration: none;
+  z-index: 2;
 }
 
 .title a:hover,
@@ -43,15 +57,20 @@
   margin: 0;
   line-height: 1.15;
   font-size: 4rem;
+  position: fixed;
+  font-weight: bolder;
+  z-index: 3;
 }
 
 .title,
 .description {
   text-align: center;
+  position: relative;
+  z-index: 2;
+  
 }
 
 .description {
-  margin: 4rem 0;
   line-height: 1.5;
   font-size: 1.5rem;
 }
@@ -65,13 +84,7 @@
     Bitstream Vera Sans Mono, Courier New, monospace;
 }
 
-.grid {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-wrap: wrap;
-  max-width: 800px;
-}
+
 
 .card {
   margin: 1rem;
@@ -85,12 +98,7 @@
   max-width: 300px;
 }
 
-.card:hover,
-.card:focus,
-.card:active {
-  color: #0070f3;
-  border-color: #0070f3;
-}
+
 
 .card h2 {
   margin: 0 0 1rem 0;
@@ -116,14 +124,26 @@
 }
 
 @media (prefers-color-scheme: dark) {
-  .card,
-  .footer {
-    border-color: rgb(255, 255, 255);
+  .card {
+    border-color: rgba(180, 176, 176, 0.37);
   }
-  .code {
-    background: #111;
-  }
-  .logo img {
-    filter: invert(1);
-  }
+
+}
+.myImg{
+  border-radius: 100px;
+  
+ 
+  opacity: 0.2;
+}
+.header-image{
+  
+  z-index: 1;
+
+}
+.imgwrap{
+ padding: 200px 200px;
+ height: 60vh;
+  width: 100vh;
+ position:relative;
+ 
 }
