--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,9 @@
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+
 html,
 body {
   padding: 0;
@@ -21,6 +27,9 @@ a {
   }
   body {
     color: white;
-    background: black;
+    background: rgb(49, 48, 48);
+  }
+  .container {
+    padding: 0 2rem;
   }
 }
